--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.18.1",
-    "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "method-override": "^3.0.0",
+    "morgan": "~1.9.1",
+    "uuid": "^11.0.5"
   }
 }
