--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "mysql2": "^3.14.0",
+    "sequelize": "^6.37.6",
     "uuid": "^11.0.5"
   }
 }
